HNPD-191: Resolving some layout issues discovered while implementing Daltile UX.

--- a/client/src/styles/components/_hero.scss
+++ b/client/src/styles/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   align-items: center;
-  background: url('https://image.s10.sfmc-content.com/lib/fe3215707564077a7c1c71/m/1/0b4a84c6-b2b5-4563-8f73-d8276bd9010c.png') top center;
+  background: url('https://image.s10.sfmc-content.com/lib/fe3215707564077a7c1c71/m/1/0b4a84c6-b2b5-4563-8f73-d8276bd9010c.png') center;
   background-size: cover;
   display: flex;
   height: 200px;
